--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   <meta property="og:title" content="940 Jones" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://940jones.com/" />
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-72944608-1', 'auto');
+  ga('send', 'pageview');
+  </script>
 </head>
 <body>
   <iframe frameborder="0" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0; width:100%; height:100%" src="https://www.google.com/maps/embed/v1/place?q=940%20Jones%20Street%2C%20San%20Francisco%2C%20CA%2C%20United%20States&key=AIzaSyBCuPdEMEoHztJE5j5af33SispCor1B1mY"></iframe>
